--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -99,7 +99,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -134,7 +133,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -181,7 +179,7 @@
     "                           .load('/FileStore/tables/employee_details.csv')\n",
     "# It throws an exception when it meets corrupted records. Since there are two corrupted records in our dataframe so \n",
     "# it will throw an exception\n",
-    "#employee_details .show()(Note: Commeted it because it will give long error which is not suitable for viewing \n",
+    "#employee_details .show()(Note: Commented it because it will give long error which is not suitable for viewing \n",
     "# notebook in github)"
    ]
   },
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -218,11 +216,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+---+------+-------+--------+--------------+\n|id |name   |age|salary|address|nominee |corrupt_record|\n+---+-------+---+------+-------+--------+--------------+\n|1  |Soumya |23 |15000 |Odisha |nominee1|null          |\n|2  |Jyotsna|23 |19000 |Mumbai |nominee2|null          |\n|5  |Vikash |31 |30000 |null   |nominee5|null          |\n+---+-------+---+------+-------+--------+--------------+\n\n"
+      "+---+-------+---+------+-------+--------+--------------+\n",
+      "|id |name   |age|salary|address|nominee |corrupt_record|\n",
+      "+---+-------+---+------+-------+--------+--------------+\n",
+      "|1  |Soumya |23 |15000 |Odisha |nominee1|null          |\n",
+      "|2  |Jyotsna|23 |19000 |Mumbai |nominee2|null          |\n",
+      "|5  |Vikash |31 |30000 |null   |nominee5|null          |\n",
+      "+---+-------+---+------+-------+--------+--------------+\n",
+      "\n"
      ]
     }
    ],
@@ -257,7 +261,8 @@
     "\n",
     "# Note: If we choose to name the column for corrupted records as \"_corrupted_record\" during schema definition,\n",
     "# we can omit this option -> \".option(\"columnNameOfCorruptRecord\", \"corrupt_record\")\". The process will still \n",
-    "# function correctly.\n"
+    "# function correctly.\n",
+    "# We can also rename(_corrupt_record) column with any name only when using \".option(\"columnNameOfCorruptRecord\", \"any_name\")\\\" otherwise it is mandatory to use # \"_corrupt_record\" as column name.\n"
    ]
   },
   {
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -293,11 +298,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+---+------+-------+--------+\n|id |name   |age|salary|address|nominee |\n+---+-------+---+------+-------+--------+\n|1  |Soumya |23 |15000 |Odisha |nominee1|\n|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n|5  |Vikash |31 |30000 |null   |nominee5|\n+---+-------+---+------+-------+--------+\n\n"
+      "+---+-------+---+------+-------+--------+\n",
+      "|id |name   |age|salary|address|nominee |\n",
+      "+---+-------+---+------+-------+--------+\n",
+      "|1  |Soumya |23 |15000 |Odisha |nominee1|\n",
+      "|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n",
+      "|5  |Vikash |31 |30000 |null   |nominee5|\n",
+      "+---+-------+---+------+-------+--------+\n",
+      "\n"
      ]
     }
    ],
@@ -331,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -346,7 +357,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -434,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -449,11 +459,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|path                                       |reason                                                                                                                             |record                                        |\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n\n"
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "|path                                       |reason                                                                                                                             |record                                        |\n",
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
+      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -464,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -479,11 +494,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------------------------------+\n|record                                        |\n+----------------------------------------------+\n|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+----------------------------------------------+\n\n"
+      "+----------------------------------------------+\n",
+      "|record                                        |\n",
+      "+----------------------------------------------+\n",
+      "|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
+      "|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
+      "+----------------------------------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -503,6 +523,9 @@
    },
    "notebookName": "Handling Corrupted Records",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
