Updating the comment structure for better view

--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
@@ -262,7 +262,8 @@
     "# Note: If we choose to name the column for corrupted records as \"_corrupted_record\" during schema definition,\n",
     "# we can omit this option -> \".option(\"columnNameOfCorruptRecord\", \"corrupt_record\")\". The process will still \n",
     "# function correctly.\n",
-    "# We can also rename(_corrupt_record) column with any name only when using \".option(\"columnNameOfCorruptRecord\", \"any_name\")\\\" otherwise it is mandatory to use # \"_corrupt_record\" as column name.\n"
+    "# We can also rename(_corrupt_record) column with any name only when using \".option(\"columnNameOfCorruptRecord\", \n",
+    "# \"any_name\")\\\" otherwise it is mandatory to use \"_corrupt_record\" as column name to print the bad records.\n"
    ]
   },
   {
