--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "33849f5c-a341-4960-a590-2334c9bf5227",
      "showTitle": false,
@@ -26,7 +29,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5a62950f-99aa-4053-94aa-58045087859b",
      "showTitle": false,
@@ -70,7 +76,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7b68b533-9b1a-45fc-ade2-673ea4556bfc",
      "showTitle": false,
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -99,6 +108,7 @@
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -133,10 +143,11 @@
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total records in permissive mode is  3\n"
+      "Total records in DROPMALFORMED mode is  3\n"
      ]
     }
    ],
@@ -152,12 +163,12 @@
     "# In order to fix this, we can use dropna() which will drop all the problematic records.\n",
     "# I have used how='all' because in our result dataframe one valid row contains null value so if we will not mention how \n",
     "# parameter as 'all' then it will drop that record as well.Refer dropna() method for detailed reason\n",
-    "print('Total records in DROPMALFORMED mode is ',employee_details .dropna(how='all').count())\n"
+    "print('Total records in DROPMALFORMED mode is ',employee_details.dropna(how='all').count())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -179,7 +190,7 @@
     "                           .load('/FileStore/tables/employee_details.csv')\n",
     "# It throws an exception when it meets corrupted records. Since there are two corrupted records in our dataframe so \n",
     "# it will throw an exception\n",
-    "#employee_details .show()(Note: Commented it because it will give long error which is not suitable for viewing \n",
+    "#employee_details .show()(Note: Commeted it because it will give long error which is not suitable for viewing \n",
     "# notebook in github)"
    ]
   },
@@ -187,7 +198,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ace4fc4f-10ed-462a-820a-eb9f531cb568",
      "showTitle": false,
@@ -201,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -216,17 +230,11 @@
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+---+------+-------+--------+--------------+\n",
-      "|id |name   |age|salary|address|nominee |corrupt_record|\n",
-      "+---+-------+---+------+-------+--------+--------------+\n",
-      "|1  |Soumya |23 |15000 |Odisha |nominee1|null          |\n",
-      "|2  |Jyotsna|23 |19000 |Mumbai |nominee2|null          |\n",
-      "|5  |Vikash |31 |30000 |null   |nominee5|null          |\n",
-      "+---+-------+---+------+-------+--------+--------------+\n",
-      "\n"
+      "+---+--------+---+------+------------+--------+----------------------------------------------+\n|id |name    |age|salary|address     |nominee |corrupt_record                                |\n+---+--------+---+------+------------+--------+----------------------------------------------+\n|1  |Soumya  |23 |15000 |Odisha      |nominee1|null                                          |\n|2  |Jyotsna |23 |19000 |Mumbai      |nominee2|null                                          |\n|3  |Pratisha|17 |20000 |Kolkata     |India   |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|4  |Pritam  |22 |100000|Uttarpradesh|India   |4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n|5  |Vikash  |31 |30000 |null        |nominee5|null                                          |\n+---+--------+---+------+------------+--------+----------------------------------------------+\n\n"
      ]
     }
    ],
@@ -263,14 +271,17 @@
     "# we can omit this option -> \".option(\"columnNameOfCorruptRecord\", \"corrupt_record\")\". The process will still \n",
     "# function correctly.\n",
     "# We can also rename(_corrupt_record) column with any name only when using \".option(\"columnNameOfCorruptRecord\", \n",
-    "# \"any_name\")\\\" otherwise it is mandatory to use \"_corrupt_record\" as column name to print the bad records.\n"
+    "# \"any_name\")\\\" otherwise it is mandatory to use \"_corrupt_record\" as column name.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5bcaad6d-b741-43ea-b0c2-0ed5c43f7205",
      "showTitle": false,
@@ -284,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -299,17 +310,11 @@
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+---+------+-------+--------+\n",
-      "|id |name   |age|salary|address|nominee |\n",
-      "+---+-------+---+------+-------+--------+\n",
-      "|1  |Soumya |23 |15000 |Odisha |nominee1|\n",
-      "|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n",
-      "|5  |Vikash |31 |30000 |null   |nominee5|\n",
-      "+---+-------+---+------+-------+--------+\n",
-      "\n"
+      "+---+-------+---+------+-------+--------+\n|id |name   |age|salary|address|nominee |\n+---+-------+---+------+-------+--------+\n|1  |Soumya |23 |15000 |Odisha |nominee1|\n|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n|5  |Vikash |31 |30000 |null   |nominee5|\n+---+-------+---+------+-------+--------+\n\n"
      ]
     }
    ],
@@ -343,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -358,6 +363,7 @@
    },
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -445,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -454,33 +460,29 @@
      },
      "inputWidgets": {},
      "nuid": "90461e24-0178-40c5-9420-a0190c25c016",
-     "showTitle": true,
-     "title": "Display bad records"
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
-      "|path                                       |reason                                                                                                                             |record                                        |\n",
-      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
-      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
-      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
-      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
-      "\n"
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|path                                       |reason                                                                                                                             |record                                        |\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n\n"
      ]
     }
    ],
    "source": [
+    "# Display bad records\n",
     "emp_bad_records_df = spark.read.format(\"json\").load('dbfs:/FileStore/tables/bad_records/20231212T140533/bad_records/part-00000-e9467212-69c6-415b-ac0c-63192ec4b770')\n",
     "emp_bad_records_df.show(truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -489,26 +491,22 @@
      },
      "inputWidgets": {},
      "nuid": "328fd6ff-88c6-466e-b86d-36f198d82517",
-     "showTitle": true,
-     "title": "Only showing bad records"
+     "showTitle": false,
+     "title": ""
     }
    },
    "outputs": [
     {
+     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------------------------------+\n",
-      "|record                                        |\n",
-      "+----------------------------------------------+\n",
-      "|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
-      "|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
-      "+----------------------------------------------+\n",
-      "\n"
+      "+----------------------------------------------+\n|record                                        |\n+----------------------------------------------+\n|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+----------------------------------------------+\n\n"
      ]
     }
    ],
    "source": [
+    "# Only showing bad records\n",
     "from pyspark.sql.functions import col\n",
     "bad_records = emp_bad_records_df.select(col('record'))\n",
     "bad_records.show(truncate=False)"
@@ -524,9 +522,6 @@
    },
    "notebookName": "Handling Corrupted Records",
    "widgets": {}
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
