--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/10. How to create dataframe in Spark.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/10. How to create dataframe in Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -17,11 +17,21 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+---+\n| id|num|\n+---+---+\n|  1|  1|\n|  2|  1|\n|  3|  1|\n|  4|  2|\n|  5|  1|\n|  6|  2|\n|  7|  2|\n+---+---+\n\n"
+      "+---+---+\n",
+      "| id|num|\n",
+      "+---+---+\n",
+      "|  1|  1|\n",
+      "|  2|  1|\n",
+      "|  3|  1|\n",
+      "|  4|  2|\n",
+      "|  5|  1|\n",
+      "|  6|  2|\n",
+      "|  7|  2|\n",
+      "+---+---+\n",
+      "\n"
      ]
     }
    ],
@@ -34,15 +44,18 @@
     "(6,2),   \n",
     "(7,2),\n",
     "]\n",
+    "\n",
+    "# Defining schema without using StructField() and StructType()\n",
     "my_schema = ['id','num']\n",
     "\n",
+    "# Creating Dataframe using createDataFrame() function\n",
     "df = spark.createDataFrame(data = my_data,schema = my_schema)\n",
     "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -65,6 +78,15 @@
    },
    "notebookName": "10. How to create dataframe in Spark",
    "widgets": {}
+  },
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
