Fix: Some spelling mistakes

--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/04.schema in spark.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/04.schema in spark.ipynb
@@ -12,7 +12,7 @@
     }
    },
    "source": [
-    "Possible Interview Quesitons\n",
+    "Possible Interview Questions\n",
     "------------------------------\n",
     "1. How to create Schema in Pyspark?\n",
     "2. What are other ways to creating it?\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -111,11 +111,20 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----------------+-------------------+-----+\n|Dest_Country_Name|Origin_Country_Name|Count|\n+-----------------+-------------------+-----+\n|United States    |Romania            |15   |\n|United States    |Croatia            |1    |\n|United States    |Ireland            |344  |\n|Egypt            |United States      |15   |\n|United States    |India              |62   |\n+-----------------+-------------------+-----+\nonly showing top 5 rows\n\n"
+      "+-----------------+-------------------+-----+\n",
+      "|Dest_Country_Name|Origin_Country_Name|Count|\n",
+      "+-----------------+-------------------+-----+\n",
+      "|United States    |Romania            |15   |\n",
+      "|United States    |Croatia            |1    |\n",
+      "|United States    |Ireland            |344  |\n",
+      "|Egypt            |United States      |15   |\n",
+      "|United States    |India              |62   |\n",
+      "+-----------------+-------------------+-----+\n",
+      "only showing top 5 rows\n",
+      "\n"
      ]
     }
    ],
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -141,11 +150,14 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "root\n |-- Dest_Country_Name: string (nullable = true)\n |-- Origin_Country_Name: string (nullable = true)\n |-- Count: integer (nullable = true)\n\n"
+      "root\n",
+      " |-- Dest_Country_Name: string (nullable = true)\n",
+      " |-- Origin_Country_Name: string (nullable = true)\n",
+      " |-- Count: integer (nullable = true)\n",
+      "\n"
      ]
     }
    ],
@@ -170,6 +182,9 @@
    },
    "notebookName": "04.schema in spark",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
