--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/05.Handling Corrupted Records.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -108,7 +108,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -143,7 +142,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -168,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -190,7 +188,7 @@
     "                           .load('/FileStore/tables/employee_details.csv')\n",
     "# It throws an exception when it meets corrupted records. Since there are two corrupted records in our dataframe so \n",
     "# it will throw an exception\n",
-    "#employee_details .show()(Note: Commeted it because it will give long error which is not suitable for viewing \n",
+    "#employee_details .show()(Note: Commented it because it will give long error which is not suitable for viewing \n",
     "# notebook in github)"
    ]
   },
@@ -215,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -230,11 +228,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+--------+---+------+------------+--------+----------------------------------------------+\n|id |name    |age|salary|address     |nominee |corrupt_record                                |\n+---+--------+---+------+------------+--------+----------------------------------------------+\n|1  |Soumya  |23 |15000 |Odisha      |nominee1|null                                          |\n|2  |Jyotsna |23 |19000 |Mumbai      |nominee2|null                                          |\n|3  |Pratisha|17 |20000 |Kolkata     |India   |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|4  |Pritam  |22 |100000|Uttarpradesh|India   |4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n|5  |Vikash  |31 |30000 |null        |nominee5|null                                          |\n+---+--------+---+------+------------+--------+----------------------------------------------+\n\n"
+      "+---+--------+---+------+------------+--------+----------------------------------------------+\n",
+      "|id |name    |age|salary|address     |nominee |corrupt_record                                |\n",
+      "+---+--------+---+------+------------+--------+----------------------------------------------+\n",
+      "|1  |Soumya  |23 |15000 |Odisha      |nominee1|null                                          |\n",
+      "|2  |Jyotsna |23 |19000 |Mumbai      |nominee2|null                                          |\n",
+      "|3  |Pratisha|17 |20000 |Kolkata     |India   |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
+      "|4  |Pritam  |22 |100000|Uttarpradesh|India   |4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
+      "|5  |Vikash  |31 |30000 |null        |nominee5|null                                          |\n",
+      "+---+--------+---+------+------------+--------+----------------------------------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -295,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -310,11 +316,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+-------+---+------+-------+--------+\n|id |name   |age|salary|address|nominee |\n+---+-------+---+------+-------+--------+\n|1  |Soumya |23 |15000 |Odisha |nominee1|\n|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n|5  |Vikash |31 |30000 |null   |nominee5|\n+---+-------+---+------+-------+--------+\n\n"
+      "+---+-------+---+------+-------+--------+\n",
+      "|id |name   |age|salary|address|nominee |\n",
+      "+---+-------+---+------+-------+--------+\n",
+      "|1  |Soumya |23 |15000 |Odisha |nominee1|\n",
+      "|2  |Jyotsna|23 |19000 |Mumbai |nominee2|\n",
+      "|5  |Vikash |31 |30000 |null   |nominee5|\n",
+      "+---+-------+---+------+-------+--------+\n",
+      "\n"
      ]
     }
    ],
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -363,7 +375,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -451,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -466,11 +477,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|path                                       |reason                                                                                                                             |record                                        |\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n\n"
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "|path                                       |reason                                                                                                                             |record                                        |\n",
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 3,Pratisha,17,20000,Kolkata,India,nominee3    |3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
+      "|dbfs:/FileStore/tables/employee_details.csv|org.apache.spark.SparkRuntimeException: [MALFORMED_CSV_RECORD] Malformed CSV record: 4,Pritam,22,100000,Uttarpradesh,India,nominee4|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
+      "+-------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -482,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -497,11 +513,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------------------------------+\n|record                                        |\n+----------------------------------------------+\n|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n+----------------------------------------------+\n\n"
+      "+----------------------------------------------+\n",
+      "|record                                        |\n",
+      "+----------------------------------------------+\n",
+      "|3,Pratisha,17,20000,Kolkata,India,nominee3    |\n",
+      "|4,Pritam,22,100000,Uttarpradesh,India,nominee4|\n",
+      "+----------------------------------------------+\n",
+      "\n"
      ]
     }
    ],
@@ -522,6 +543,9 @@
    },
    "notebookName": "Handling Corrupted Records",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
