--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/06.How to read json file.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/06.How to read json file.ipynb
@@ -39,7 +39,7 @@
     "JSON, short for JavaScript Object Notation, is a lightweight data interchange format. It uses a human-readable text format to represent data objects consisting of \n",
     "key-value pairs. \n",
     "\n",
-    "***Find the below figure where Mahish has given a brief introduction on JSON data***\n",
+    "***Find the below figure where Manish has given a brief introduction on JSON data***\n",
     "\n",
     "<img src=\"https://drive.google.com/uc?id=1f-9OKUvPAwIZgI86tqy9fleFaBRu1jPD\" width=\"700\" height=\"500\">\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -63,11 +63,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+--------+------+\n|age|    name|salary|\n+---+--------+------+\n| 20|  Manish| 20000|\n| 25|  Nikita| 21000|\n| 16|  Pritam| 22000|\n| 35|Prantosh| 25000|\n| 67|  Vikash| 40000|\n+---+--------+------+\n\n"
+      "+---+--------+------+\n",
+      "|age|    name|salary|\n",
+      "+---+--------+------+\n",
+      "| 20|  Manish| 20000|\n",
+      "| 25|  Nikita| 21000|\n",
+      "| 16|  Pritam| 22000|\n",
+      "| 35|Prantosh| 25000|\n",
+      "| 67|  Vikash| 40000|\n",
+      "+---+--------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -98,11 +106,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+--------+------+\n|age|gender|    name|salary|\n+---+------+--------+------+\n| 20|  null|  Manish| 20000|\n| 25|  null|  Nikita| 21000|\n| 16|  null|  Pritam| 22000|\n| 35|  null|Prantosh| 25000|\n| 67|     M|  Vikash| 40000|\n+---+------+--------+------+\n\n"
+      "+---+------+--------+------+\n",
+      "|age|gender|    name|salary|\n",
+      "+---+------+--------+------+\n",
+      "| 20|  null|  Manish| 20000|\n",
+      "| 25|  null|  Nikita| 21000|\n",
+      "| 16|  null|  Pritam| 22000|\n",
+      "| 35|  null|Prantosh| 25000|\n",
+      "| 67|     M|  Vikash| 40000|\n",
+      "+---+------+--------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -114,7 +130,7 @@
     "                              .load('/FileStore/tables/line_delimited_json_extrafield.json')\n",
     "line_delimited_extrafield_df.show()\n",
     "\n",
-    "#Takeways: If there is one extra field for any record then it will set null for rest of the record."
+    "#Takeaways: If there is one extra field for any record then it will set null for rest of the record."
    ]
   },
   {
@@ -149,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -164,11 +180,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+--------+------+\n|age|    name|salary|\n+---+--------+------+\n| 20|  Manish| 20000|\n| 25|  Nikita| 21000|\n| 16|  Pritam| 22000|\n| 35|Prantosh| 25000|\n| 67|  Vikash| 40000|\n+---+--------+------+\n\n"
+      "+---+--------+------+\n",
+      "|age|    name|salary|\n",
+      "+---+--------+------+\n",
+      "| 20|  Manish| 20000|\n",
+      "| 25|  Nikita| 21000|\n",
+      "| 16|  Pritam| 22000|\n",
+      "| 35|Prantosh| 25000|\n",
+      "| 67|  Vikash| 40000|\n",
+      "+---+--------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -187,7 +211,7 @@
     "                              .option(\"multiline\",\"true\")\\\n",
     "                              .load('/FileStore/tables/Multi_line_correct.json')\n",
     "# It will throw an exception if multiline option is not mentioned while reading the multiline json data as by default\n",
-    "# \"multipleline\" option sets to false\n",
+    "# \"multiline\" option sets to false\n",
     "multiline_json_df.show()\n"
    ]
   },
@@ -211,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -226,11 +250,15 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+------+------+\n|age|  name|salary|\n+---+------+------+\n| 20|Manish| 20000|\n+---+------+------+\n\n"
+      "+---+------+------+\n",
+      "|age|  name|salary|\n",
+      "+---+------+------+\n",
+      "| 20|Manish| 20000|\n",
+      "+---+------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -251,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -266,11 +294,19 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------------------------+----+--------+------+\n|_corrupt_record                         |age |name    |salary|\n+----------------------------------------+----+--------+------+\n|null                                    |20  |Manish  |20000 |\n|null                                    |25  |Nikita  |21000 |\n|null                                    |16  |Pritam  |22000 |\n|null                                    |35  |Prantosh|25000 |\n|{\"name\":\"Vikash\",\"age\":67,\"salary\":40000|null|null    |null  |\n+----------------------------------------+----+--------+------+\n\n"
+      "+----------------------------------------+----+--------+------+\n",
+      "|_corrupt_record                         |age |name    |salary|\n",
+      "+----------------------------------------+----+--------+------+\n",
+      "|null                                    |20  |Manish  |20000 |\n",
+      "|null                                    |25  |Nikita  |21000 |\n",
+      "|null                                    |16  |Pritam  |22000 |\n",
+      "|null                                    |35  |Prantosh|25000 |\n",
+      "|{\"name\":\"Vikash\",\"age\":67,\"salary\":40000|null|null    |null  |\n",
+      "+----------------------------------------+----+--------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -281,7 +317,7 @@
     "                              .option(\"mode\",\"PERMISSIVE\")\\\n",
     "                              .load('/FileStore/tables/corrupted_json.json')\n",
     "# It will create _corrupt_record column and will add the corrupted record.\n",
-    "# The null value will be set for respective valid record in _corrupt_recod column\n",
+    "# The null value will be set for respective valid record in _corrupt_record column\n",
     "corrupted_json_df.show(truncate=False)"
    ]
   }
@@ -295,6 +331,9 @@
    },
    "notebookName": "06.How to read json file",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
