--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/07.What is Apache Parquet file.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/07.What is Apache Parquet file.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -94,11 +94,35 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------------------------------+-------------------+-----+\n|DEST_COUNTRY_NAME               |ORIGIN_COUNTRY_NAME|count|\n+--------------------------------+-------------------+-----+\n|United States                   |Romania            |1    |\n|United States                   |Ireland            |264  |\n|United States                   |India              |69   |\n|Egypt                           |United States      |24   |\n|Equatorial Guinea               |United States      |1    |\n|United States                   |Singapore          |25   |\n|United States                   |Grenada            |54   |\n|Costa Rica                      |United States      |477  |\n|Senegal                         |United States      |29   |\n|United States                   |Marshall Islands   |44   |\n|Guyana                          |United States      |17   |\n|United States                   |Sint Maarten       |53   |\n|Malta                           |United States      |1    |\n|Bolivia                         |United States      |46   |\n|Anguilla                        |United States      |21   |\n|Turks and Caicos Islands        |United States      |136  |\n|United States                   |Afghanistan        |2    |\n|Saint Vincent and the Grenadines|United States      |1    |\n|Italy                           |United States      |390  |\n|United States                   |Russia             |156  |\n+--------------------------------+-------------------+-----+\nonly showing top 20 rows\n\n"
+      "+--------------------------------+-------------------+-----+\n",
+      "|DEST_COUNTRY_NAME               |ORIGIN_COUNTRY_NAME|count|\n",
+      "+--------------------------------+-------------------+-----+\n",
+      "|United States                   |Romania            |1    |\n",
+      "|United States                   |Ireland            |264  |\n",
+      "|United States                   |India              |69   |\n",
+      "|Egypt                           |United States      |24   |\n",
+      "|Equatorial Guinea               |United States      |1    |\n",
+      "|United States                   |Singapore          |25   |\n",
+      "|United States                   |Grenada            |54   |\n",
+      "|Costa Rica                      |United States      |477  |\n",
+      "|Senegal                         |United States      |29   |\n",
+      "|United States                   |Marshall Islands   |44   |\n",
+      "|Guyana                          |United States      |17   |\n",
+      "|United States                   |Sint Maarten       |53   |\n",
+      "|Malta                           |United States      |1    |\n",
+      "|Bolivia                         |United States      |46   |\n",
+      "|Anguilla                        |United States      |21   |\n",
+      "|Turks and Caicos Islands        |United States      |136  |\n",
+      "|United States                   |Afghanistan        |2    |\n",
+      "|Saint Vincent and the Grenadines|United States      |1    |\n",
+      "|Italy                           |United States      |390  |\n",
+      "|United States                   |Russia             |156  |\n",
+      "+--------------------------------+-------------------+-----+\n",
+      "only showing top 20 rows\n",
+      "\n"
      ]
     }
    ],
@@ -138,7 +162,7 @@
     "\n",
     "**Note**\n",
     "- Parquet is a structured data file format.\n",
-    "- It comes with binary form means nomally we can't read the contents of the file using normal editor of the system.\n",
+    "- It comes with binary form means normally we can't read the contents of the file using normal editor of the system.\n",
     "- And of course it's a columnar-based file format but it uses hybrid approach for better efficiency.\n"
    ]
   },
@@ -224,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -247,6 +271,9 @@
    },
    "notebookName": "07.What is Apache Parquet file",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
