--- a/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/08. How to write dataframe to disk in spark.ipynb
+++ b/Learn_Pyspark/Youtube/Manish Kumar/Pyspark_Hands-on/08. How to write dataframe to disk in spark.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "#####Dataframe writer API general structure\n",
     "```\n",
-    "DataFrameWriter.fomat()\\\n",
+    "DataFrameWriter.format()\\\n",
     "               .option()\\\n",
     "               .partitionBy()\\\n",
     "               .bucketBy()\\\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -94,11 +94,29 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---+--------+---+------+-------+------+\n| id|    name|age|salary|address|gender|\n+---+--------+---+------+-------+------+\n|  1|  Manish| 26| 75000|  INDIA|     m|\n|  2|  Nikita| 23|100000|    USA|     f|\n|  3|  Pritam| 22|150000|  INDIA|     m|\n|  4|Prantosh| 17|200000|  JAPAN|     m|\n|  5|  Vikash| 31|300000|    USA|     m|\n|  6|   Rahul| 55|300000|  INDIA|     m|\n|  7|    Raju| 67|540000|    USA|     m|\n|  8| Praveen| 28| 70000|  JAPAN|     m|\n|  9|     Dev| 32|150000|  JAPAN|     m|\n| 10|  Sherin| 16| 25000| RUSSIA|     f|\n| 11|    Ragu| 12| 35000|  INDIA|     f|\n| 12|   Sweta| 43|200000|  INDIA|     f|\n| 13| Raushan| 48|650000|    USA|     m|\n| 14|  Mukesh| 36| 95000| RUSSIA|     m|\n| 15| Prakash| 52|750000|  INDIA|     m|\n+---+--------+---+------+-------+------+\n\n"
+      "+---+--------+---+------+-------+------+\n",
+      "| id|    name|age|salary|address|gender|\n",
+      "+---+--------+---+------+-------+------+\n",
+      "|  1|  Manish| 26| 75000|  INDIA|     m|\n",
+      "|  2|  Nikita| 23|100000|    USA|     f|\n",
+      "|  3|  Pritam| 22|150000|  INDIA|     m|\n",
+      "|  4|Prantosh| 17|200000|  JAPAN|     m|\n",
+      "|  5|  Vikash| 31|300000|    USA|     m|\n",
+      "|  6|   Rahul| 55|300000|  INDIA|     m|\n",
+      "|  7|    Raju| 67|540000|    USA|     m|\n",
+      "|  8| Praveen| 28| 70000|  JAPAN|     m|\n",
+      "|  9|     Dev| 32|150000|  JAPAN|     m|\n",
+      "| 10|  Sherin| 16| 25000| RUSSIA|     f|\n",
+      "| 11|    Ragu| 12| 35000|  INDIA|     f|\n",
+      "| 12|   Sweta| 43|200000|  INDIA|     f|\n",
+      "| 13| Raushan| 48|650000|    USA|     m|\n",
+      "| 14|  Mukesh| 36| 95000| RUSSIA|     m|\n",
+      "| 15| Prakash| 52|750000|  INDIA|     m|\n",
+      "+---+--------+---+------+-------+------+\n",
+      "\n"
      ]
     }
    ],
@@ -108,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -132,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -147,11 +165,29 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+\n|address|\n+-------+\n|  INDIA|\n|    USA|\n|  INDIA|\n|  JAPAN|\n|    USA|\n|  INDIA|\n|    USA|\n|  JAPAN|\n|  JAPAN|\n| RUSSIA|\n|  INDIA|\n|  INDIA|\n|    USA|\n| RUSSIA|\n|  INDIA|\n+-------+\n\n"
+      "+-------+\n",
+      "|address|\n",
+      "+-------+\n",
+      "|  INDIA|\n",
+      "|    USA|\n",
+      "|  INDIA|\n",
+      "|  JAPAN|\n",
+      "|    USA|\n",
+      "|  INDIA|\n",
+      "|    USA|\n",
+      "|  JAPAN|\n",
+      "|  JAPAN|\n",
+      "| RUSSIA|\n",
+      "|  INDIA|\n",
+      "|  INDIA|\n",
+      "|    USA|\n",
+      "| RUSSIA|\n",
+      "|  INDIA|\n",
+      "+-------+\n",
+      "\n"
      ]
     }
    ],
@@ -161,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -176,7 +212,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -294,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -318,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -333,7 +368,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -471,6 +505,9 @@
    },
    "notebookName": "08. How to write dataframe to disk in spark",
    "widgets": {}
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
